# ecommerce-recommendation-system

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.gpu.yml  docker-compose.yml  dvc.yaml  exploration_audit_plan.md  metrics.json  output.txt  params.yaml  pyproject.toml  ruff.toml
.dvc/: config
.github/workflows/: ci.yml
configs/: default.yaml
data/raw/: order_products__prior.csv.dvc  orders.csv.dvc
docs/: checklist.md  decisions.md  kickoff.md  model_card.md  tech-challenge-ordenacao.md
docs/reports/: 2020-06-27-walkthrough-execucao-e-logging-do-modelo-neural-mlflow.md  2026-06-27-walkthrough-execucao-e-logging-do-modelo-neural-mlflow.md  tech_challenge_analysis.md
docs/superpowers/plans/: 2026-07-05-fix-audit-issues.md
scripts/: register_model.py  setup.ps1  validate_env.py  verify_neural.py
src/recsys/: __init__.py
src/recsys/config/: __init__.py  settings.py
src/recsys/data/: __init__.py  instacart_loader.py  loader.py
src/recsys/metrics/: __init__.py  evaluation.py
src/recsys/models/: __init__.py  neural_net.py
src/recsys/pipeline/: __init__.py  evaluate.py  feature_eng.py  preprocess.py  train.py
src/recsys/recommenders/: __init__.py  base.py  baseline.py  neural.py  popularity.py
src/recsys/utils/: __init__.py  mlflow.py  seeds.py
tests/: __init__.py  test_data_pipeline.py  test_neural_recommender.py  test_recommenders.py  test_settings.py
