[project]
name = "ecommerce-recommendation-system"
version = "0.1.0"
description = "Sistema de recomendação para e-commerce baseado em NeuMF (Neural Collaborative Filtering)"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }

dependencies = [
    "torch>=2.2",
    "scikit-learn>=1.4",
    "mlflow>=2.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15.0",
]

[tool.poetry]
packages = [{ include = "recsys", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-cov = ">=5.0"
ruff = ">=0.4"
pre-commit = ">=3.7"
dvc = ">=3.50"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "pre-commit>=3.7",
]

# ---------------------------------------------------------------------------
# Build
# ---------------------------------------------------------------------------
[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["src"]

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/recsys"]
omit = ["tests/*"]
